<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#eeeeee">

    <android.support.v7.widget.CardView
            android:id="@+id/cardView1"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="100dp"
                    android:layout_height="172dp"
                    android:scaleType="centerCrop" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:contentDescription="@string/product_image"
                    app:layout_constraintVertical_bias="0.013"/>

            <TextView
                    android:id="@+id/product_name"
                    android:gravity="center"
                    android:layout_width="270dp"
                    android:layout_height="76dp"
                    android:padding="20dp"
                    tools:text="Crousti Moelleux Complet"
                    android:fontFamily="sans-serif"
                    android:textColor="#333"
                    android:textSize="18sp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginRight="8dp"
                    app:layout_constraintStart_toEndOf="@+id/product_image"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.727"/>
            <TextView
                    android:id="@+id/nutrition_grade"
                    android:text="Mediocre"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/product_name"
                    app:layout_constraintStart_toEndOf="@+id/product_image"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.597" android:textColor="@android:color/black"/>
            <ImageView
                    android:id="@+id/nutrition_grade_color"
                    android:width="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/circle_large"
                    app:layout_constraintStart_toStartOf="@+id/product_name" android:layout_marginLeft="40dp"
                    android:layout_marginStart="40dp" app:layout_constraintEnd_toStartOf="@+id/nutrition_grade"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="4dp"
                    app:layout_constraintTop_toTopOf="@+id/nutrition_grade"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:contentDescription="@string/nutrition_grade_color"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp" tools:layout_editor_absoluteY="306dp" tools:layout_editor_absoluteX="9dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView1"
            android:id="@+id/cardView2">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="match_parent"
                      android:orientation="vertical"
                      android:gravity="center"
                      android:layout_margin="8dp">
            <TextView
                    android:id="@+id/ingredientsTitle"
                    android:text="@string/ingredients_title"
                    android:textSize="18sp"
                    android:textColor="#333"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"/>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="2dp" tools:layout_editor_absoluteX="10dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:rowCount="2"
                    android:columnCount="3"
                    android:layout_margin="10dp"
                    tools:layout_editor_absoluteX="0dp">
            <TextView
                    android:text="@string/saturated_fat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:layout_marginRight="24dp"
                    android:id="@+id/textView2"
                    android:layout_column="0"
                    android:layout_row="0"
                    android:layout_gravity="center" android:textColor="@android:color/black"/>
            <ImageView
                    android:id="@+id/satured_fat_level_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    app:srcCompat="@drawable/circle_large"
                    android:contentDescription="@string/nutrition_grade_color"
                    android:layout_column="1"
                    android:layout_row="0"
                    android:layout_gravity="center"/>
            <TextView
                    android:id="@+id/satured_fat_level_text"
                    android:text="Mediocre"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_row="0"/>
            <TextView
                    android:text="@string/salt"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_column="0"
                    android:layout_row="1" android:textColor="@android:color/black"/>
            <ImageView
                    android:gravity="center"
                    android:id="@+id/salt_level_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="6dp"
                    app:srcCompat="@drawable/circle_large"
                    android:contentDescription="@string/nutrition_grade_color"
                    android:layout_column="1"
                    android:layout_row="1"/>
            <TextView
                    android:id="@+id/salt_level_text"
                    android:text="Mediocre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:layout_column="2"
                    android:layout_row="1"/>
        </GridLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>